--- a/zappa/Dockerfile
+++ b/zappa/Dockerfile
@@ -6,16 +6,13 @@ WORKDIR /tmp
 
 RUN wget -qO- https://get.haskellstack.org/ | sh
 RUN wget https://hackage.haskell.org/package/pandoc-1.17.0.3/pandoc-1.17.0.3.tar.gz \ 
-	&& tar xvzf pandoc-1.17.0.3.tar.gz
+	&& tar xvzf pandoc-1.17.0.3.tar.gz \
+	&& rm pandoc-1.17.0.3.tar.gz
 
 WORKDIR pandoc-1.17.0.3
 
 RUN stack setup \
 	&& stack install
-
-WORKDIR /tmp
-
-RUN rm -rf pandoc-1.17.0.3*
 
 ENV PATH="/root/.local/bin:${PATH}"
 
